Fixed swiper to fit on smaller screens

--- a/src/styles/swiper.css
+++ b/src/styles/swiper.css
@@ -12,7 +12,7 @@
 .swipeCardWrapper {
   position: relative;
   overflow: hidden;
-  width: 300px;
+  width: min(300px, 100%);
   height: 300px;
 }
 
